--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ actix-web = "4"
 actix-files = "0.6"
 actix-web-static-files = "4.0"
 static-files = "0.2"
+actix-http = "3.2"
 
 [build-dependencies]
 static-files = "0.2"
