--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ actix-web-static-files = "4.0"
 static-files = "0.2"
 actix-http = "3.2"
 
+serde = { version = "1.0", features = ["derive"] }
+
 [build-dependencies]
 static-files = "0.2"
