--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ static-files = "0.2"
 actix-http = "3.2"
 
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 static-files = "0.2"
